--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "express-fileupload": "^0.4.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.1.0",
     "mariadb": "0.0.2-security",
